--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "ajv": "^6.12.0",
+    "bootstrap": "^4.4.1",
+    "re-base": "^4.0.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
+    "react-iframe": "^1.8.0",
+    "react-player": "^1.15.3",
     "react-scripts": "2.0.5",
-    "react-scroll": "^1.7.10"
+    "react-scroll": "^1.7.10",
+    "react-soundcloud": "^0.1.1",
+    "react-soundcloud-embed": "^1.0.3",
+    "react-youtube-playlist": "^2.2.8",
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
