--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "dependencies": {
     "ajv": "^6.12.0",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.14.0",
     "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-iframe": "^1.8.0",
     "react-player": "^1.15.3",
-    "react-scripts": "2.0.5",
-    "react-scroll": "^1.7.10",
+    "react-scripts": "^2.0.5",
+    "react-scroll": "^1.7.16",
     "react-soundcloud": "^0.1.1",
     "react-soundcloud-embed": "^1.0.3",
     "react-youtube-playlist": "^2.2.8",
     "reactstrap": "^8.4.1",
+    "rebase": "^0.3.0",
     "redux": "^4.0.5",
     "video-react": "^0.14.1"
   },
