--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-smooth-scrolling",
+  "homepage": "https://covidwiki-71a23.web.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
